updated code to generate unk_mbids with timestamp

--- a/MLHD.ipynb
+++ b/MLHD.ipynb
@@ -1162,15 +1162,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "in_for_rec_redir[-out_for_rec_redir].to_csv('unk_ids/unk_rec_mbids.txt')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1371,15 +1362,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_artists_redirect[-output_artists_redirect].to_csv('unk_ids/unk_artist_mbids.txt')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 46,
    "metadata": {},
    "outputs": [
@@ -1431,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -1462,43 +1444,82 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2663</th>\n",
-       "      <td>1149285099</td>\n",
+       "      <td>2006-06-02 21:51:39+00:00</td>\n",
        "      <td>0ba263e6-ffbe-4b8b-b620-e457483e5b7a</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9497</th>\n",
-       "      <td>1178148413</td>\n",
+       "      <td>2007-05-02 23:26:53+00:00</td>\n",
        "      <td>553eaf26-9b48-4720-bc52-1a0cee56b238</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11620</th>\n",
-       "      <td>1184012488</td>\n",
+       "      <td>2007-07-09 20:21:28+00:00</td>\n",
        "      <td>6a7cf8b1-b3e6-4331-a74a-2cbda7d5367b</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12748</th>\n",
-       "      <td>1186758263</td>\n",
-       "      <td>6a7cf8b1-b3e6-4331-a74a-2cbda7d5367b</td>\n",
+       "      <th>13768</th>\n",
+       "      <td>2007-09-12 00:01:20+00:00</td>\n",
+       "      <td>03f22451-112e-4a4c-ad4d-2f0045a95802</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13767</th>\n",
-       "      <td>1189555079</td>\n",
-       "      <td>6a7cf8b1-b3e6-4331-a74a-2cbda7d5367b</td>\n",
+       "      <th>13769</th>\n",
+       "      <td>2007-09-12 00:05:30+00:00</td>\n",
+       "      <td>1409f666-b38c-4aaa-bd29-2d5a528b6733</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15756</th>\n",
+       "      <td>2010-07-19 15:40:04+00:00</td>\n",
+       "      <td>c47c1ebd-afd0-41fa-9034-a0803c0c2717</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15861</th>\n",
+       "      <td>2010-07-22 14:18:53+00:00</td>\n",
+       "      <td>2cfd317a-f984-4526-ae58-8e8ee6cf901f</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16939</th>\n",
+       "      <td>2010-08-05 09:48:36+00:00</td>\n",
+       "      <td>b6afc74c-9364-41e4-b33e-7eb6c7bc494d</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17032</th>\n",
+       "      <td>2010-08-08 04:03:08+00:00</td>\n",
+       "      <td>36c5cc06-1b73-4e4a-8317-a1a327f93aac</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17751</th>\n",
+       "      <td>2010-08-27 09:57:04+00:00</td>\n",
+       "      <td>9ace7693-50ce-4fc7-96b7-5c64754360f3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>1148 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        timestamp                        recording-MBID\n",
-       "2663   1149285099  0ba263e6-ffbe-4b8b-b620-e457483e5b7a\n",
-       "9497   1178148413  553eaf26-9b48-4720-bc52-1a0cee56b238\n",
-       "11620  1184012488  6a7cf8b1-b3e6-4331-a74a-2cbda7d5367b\n",
-       "12748  1186758263  6a7cf8b1-b3e6-4331-a74a-2cbda7d5367b\n",
-       "13767  1189555079  6a7cf8b1-b3e6-4331-a74a-2cbda7d5367b"
+       "                      timestamp                        recording-MBID\n",
+       "2663  2006-06-02 21:51:39+00:00  0ba263e6-ffbe-4b8b-b620-e457483e5b7a\n",
+       "9497  2007-05-02 23:26:53+00:00  553eaf26-9b48-4720-bc52-1a0cee56b238\n",
+       "11620 2007-07-09 20:21:28+00:00  6a7cf8b1-b3e6-4331-a74a-2cbda7d5367b\n",
+       "13768 2007-09-12 00:01:20+00:00  03f22451-112e-4a4c-ad4d-2f0045a95802\n",
+       "13769 2007-09-12 00:05:30+00:00  1409f666-b38c-4aaa-bd29-2d5a528b6733\n",
+       "...                         ...                                   ...\n",
+       "15756 2010-07-19 15:40:04+00:00  c47c1ebd-afd0-41fa-9034-a0803c0c2717\n",
+       "15861 2010-07-22 14:18:53+00:00  2cfd317a-f984-4526-ae58-8e8ee6cf901f\n",
+       "16939 2010-08-05 09:48:36+00:00  b6afc74c-9364-41e4-b33e-7eb6c7bc494d\n",
+       "17032 2010-08-08 04:03:08+00:00  36c5cc06-1b73-4e4a-8317-a1a327f93aac\n",
+       "17751 2010-08-27 09:57:04+00:00  9ace7693-50ce-4fc7-96b7-5c64754360f3\n",
+       "\n",
+       "[1148 rows x 2 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1508,15 +1529,19 @@
     "\n",
     "unk_rec_mbid = in_for_rec_redir[-out_for_rec_redir]\n",
     "\n",
-    "unk_rec_mbid_timestamp = df[['timestamp', 'recording-MBID']][df[['timestamp', 'recording-MBID']]['recording-MBID'].isin(unk_rec_mbid)]\n",
+    "main_df_rec_timestamp = df[['timestamp', 'recording-MBID']].drop_duplicates('recording-MBID')\n",
+    "main_df_rec_timestamp.timestamp = pd.to_datetime(main_df_rec_timestamp.timestamp, unit='s', utc=True)\n",
+    "\n",
+    "unk_rec_mbid_timestamp = main_df_rec_timestamp[main_df_rec_timestamp['recording-MBID'].isin(unk_rec_mbid)]\n",
     "unk_rec_mbid_timestamp.to_csv('unk_ids/unk_rec_mbids_timestamp.txt', index=False)\n",
     "\n",
-    "unk_rec_mbid_timestamp.head()"
+    "\n",
+    "unk_rec_mbid_timestamp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -1547,43 +1572,82 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2422</th>\n",
-       "      <td>1218389884</td>\n",
-       "      <td>184473bc-54cd-4fc6-af62-cd43b5bf4651</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2448</th>\n",
-       "      <td>1218401964</td>\n",
-       "      <td>184473bc-54cd-4fc6-af62-cd43b5bf4651</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2548</th>\n",
-       "      <td>1218881141</td>\n",
-       "      <td>184473bc-54cd-4fc6-af62-cd43b5bf4651</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5775</th>\n",
-       "      <td>1232638364</td>\n",
+       "      <td>2008-08-10 17:38:04+00:00</td>\n",
        "      <td>184473bc-54cd-4fc6-af62-cd43b5bf4651</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7812</th>\n",
-       "      <td>1242206498</td>\n",
+       "      <td>2009-05-13 09:21:38+00:00</td>\n",
        "      <td>3ba4b994-ef21-4b9b-b0ed-b5b45530befc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11130</th>\n",
+       "      <td>2009-11-08 18:07:21+00:00</td>\n",
+       "      <td>32c91695-1a31-4ec5-a12e-9e3870b64dbd</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14560</th>\n",
+       "      <td>2010-10-25 22:29:53+00:00</td>\n",
+       "      <td>0082d740-b0f8-4261-87ad-261c31b5f036</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3386</th>\n",
+       "      <td>2008-03-02 12:14:49+00:00</td>\n",
+       "      <td>8c09c5f5-01df-45bb-82c6-76571616977e</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16604</th>\n",
+       "      <td>2012-01-28 08:49:41+00:00</td>\n",
+       "      <td>d953cd43-3e91-4846-8f4f-4d4e372a3fbc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20933</th>\n",
+       "      <td>2006-05-10 10:10:59+00:00</td>\n",
+       "      <td>9fc7c771-2875-4ffa-9c3e-06745231de7b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3599</th>\n",
+       "      <td>2006-04-21 19:01:45+00:00</td>\n",
+       "      <td>d2374cc1-a6f5-42af-bd1d-ecbd3355edce</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30808</th>\n",
+       "      <td>2011-12-24 04:11:05+00:00</td>\n",
+       "      <td>1b439965-171f-4626-a68d-fbdf41a3f812</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23450</th>\n",
+       "      <td>2012-11-05 15:46:02+00:00</td>\n",
+       "      <td>1d2a2345-67a5-4215-bffd-bb1c89fed52d</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>143 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       timestamp                           artist-MBID\n",
-       "2422  1218389884  184473bc-54cd-4fc6-af62-cd43b5bf4651\n",
-       "2448  1218401964  184473bc-54cd-4fc6-af62-cd43b5bf4651\n",
-       "2548  1218881141  184473bc-54cd-4fc6-af62-cd43b5bf4651\n",
-       "5775  1232638364  184473bc-54cd-4fc6-af62-cd43b5bf4651\n",
-       "7812  1242206498  3ba4b994-ef21-4b9b-b0ed-b5b45530befc"
+       "                      timestamp                           artist-MBID\n",
+       "2422  2008-08-10 17:38:04+00:00  184473bc-54cd-4fc6-af62-cd43b5bf4651\n",
+       "7812  2009-05-13 09:21:38+00:00  3ba4b994-ef21-4b9b-b0ed-b5b45530befc\n",
+       "11130 2009-11-08 18:07:21+00:00  32c91695-1a31-4ec5-a12e-9e3870b64dbd\n",
+       "14560 2010-10-25 22:29:53+00:00  0082d740-b0f8-4261-87ad-261c31b5f036\n",
+       "3386  2008-03-02 12:14:49+00:00  8c09c5f5-01df-45bb-82c6-76571616977e\n",
+       "...                         ...                                   ...\n",
+       "16604 2012-01-28 08:49:41+00:00  d953cd43-3e91-4846-8f4f-4d4e372a3fbc\n",
+       "20933 2006-05-10 10:10:59+00:00  9fc7c771-2875-4ffa-9c3e-06745231de7b\n",
+       "3599  2006-04-21 19:01:45+00:00  d2374cc1-a6f5-42af-bd1d-ecbd3355edce\n",
+       "30808 2011-12-24 04:11:05+00:00  1b439965-171f-4626-a68d-fbdf41a3f812\n",
+       "23450 2012-11-05 15:46:02+00:00  1d2a2345-67a5-4215-bffd-bb1c89fed52d\n",
+       "\n",
+       "[143 rows x 2 columns]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1593,10 +1657,13 @@
     "\n",
     "unk_artist_mbid = input_artists_redirect[-output_artists_redirect]\n",
     "\n",
-    "unk_artist_mbid_timestamp = df[['timestamp', 'artist-MBID']][df[['timestamp', 'artist-MBID']]['artist-MBID'].isin(unk_artist_mbid)]\n",
+    "main_df_artist_timestamp = df[['timestamp', 'artist-MBID']].drop_duplicates('artist-MBID')\n",
+    "main_df_artist_timestamp.timestamp = pd.to_datetime(main_df_artist_timestamp.timestamp, unit='s', utc=True)\n",
+    "\n",
+    "unk_artist_mbid_timestamp = main_df_artist_timestamp[main_df_artist_timestamp['artist-MBID'].isin(unk_artist_mbid)]\n",
     "unk_artist_mbid_timestamp.to_csv('unk_ids/unk_artist_mbids_timestamp.txt', index=False)\n",
     "\n",
-    "unk_artist_mbid_timestamp.head()"
+    "unk_artist_mbid_timestamp"
    ]
   }
  ],
