updated requirements, minor update in MLHD_conflation_mapping.ipynb

--- a/MLHD_conflation_mapping.ipynb
+++ b/MLHD_conflation_mapping.ipynb
@@ -636,33 +636,257 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>mlhd_artist_mbid</th>\n",
+       "      <th>mlhd_recording_mbid</th>\n",
+       "      <th>canonical_mbid</th>\n",
+       "      <th>MLHD_rec_name</th>\n",
+       "      <th>MLHD_artist_name</th>\n",
+       "      <th>artist_credit_list</th>\n",
+       "      <th>received_rec_mbid</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>1109802260</td>\n",
+       "      <td>24b4aee8-32ed-4163-98f7-55bae67411ae</td>\n",
+       "      <td>098994f0-bf51-4393-9d3e-da220e024d76</td>\n",
+       "      <td>45024040-a343-4141-9bc9-27ef0cc9163d</td>\n",
+       "      <td>Somebody Told Me</td>\n",
+       "      <td>The Killers</td>\n",
+       "      <td>95e1ead9-4d31-4808-a7ac-32c3614c116b</td>\n",
+       "      <td>526c30bd-b249-4f2a-8b20-508ad44605c7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>1110846571</td>\n",
+       "      <td>5245e5cd-4408-4d9e-a037-c71a53edce83</td>\n",
+       "      <td>93f522ef-b523-4f93-9598-74adb7d25ca6</td>\n",
+       "      <td>93f522ef-b523-4f93-9598-74adb7d25ca6</td>\n",
+       "      <td>Bitte ein Kuss</td>\n",
+       "      <td>Jonah Matranga</td>\n",
+       "      <td>5245e5cd-4408-4d9e-a037-c71a53edce83</td>\n",
+       "      <td>427e93bc-06fb-4090-95a0-23d208d38654</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>1110846985</td>\n",
+       "      <td>5245e5cd-4408-4d9e-a037-c71a53edce83</td>\n",
+       "      <td>37ed6e15-b372-441e-818f-c2711d99bb8a</td>\n",
+       "      <td>37ed6e15-b372-441e-818f-c2711d99bb8a</td>\n",
+       "      <td>Smile</td>\n",
+       "      <td>Jonah Matranga</td>\n",
+       "      <td>5245e5cd-4408-4d9e-a037-c71a53edce83</td>\n",
+       "      <td>7b481c87-38db-47dd-bc5b-f1014f395ff7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>1110846985</td>\n",
+       "      <td>5245e5cd-4408-4d9e-a037-c71a53edce83</td>\n",
+       "      <td>37ed6e15-b372-441e-818f-c2711d99bb8a</td>\n",
+       "      <td>37ed6e15-b372-441e-818f-c2711d99bb8a</td>\n",
+       "      <td>Smile</td>\n",
+       "      <td>Jonah Matranga</td>\n",
+       "      <td>5245e5cd-4408-4d9e-a037-c71a53edce83</td>\n",
+       "      <td>7b481c87-38db-47dd-bc5b-f1014f395ff7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>1110847156</td>\n",
+       "      <td>5245e5cd-4408-4d9e-a037-c71a53edce83</td>\n",
+       "      <td>f7eac6cf-c5de-4456-91d5-db5c4e067703</td>\n",
+       "      <td>f7eac6cf-c5de-4456-91d5-db5c4e067703</td>\n",
+       "      <td>Perfect Pair</td>\n",
+       "      <td>Jonah Matranga</td>\n",
+       "      <td>5245e5cd-4408-4d9e-a037-c71a53edce83</td>\n",
+       "      <td>a85092fb-dff4-49c0-b200-ada753aa9017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9872</th>\n",
+       "      <td>1212397692</td>\n",
+       "      <td>b1003bf1-25b8-41f4-a783-36060f987913</td>\n",
+       "      <td>7782f903-7deb-4bed-be0f-627f6d6450ac</td>\n",
+       "      <td>7782f903-7deb-4bed-be0f-627f6d6450ac</td>\n",
+       "      <td>Hello, I’m in Delaware</td>\n",
+       "      <td>City and Colour</td>\n",
+       "      <td>b1003bf1-25b8-41f4-a783-36060f987913</td>\n",
+       "      <td>9bd93304-842f-4f46-9409-a2e4ff5b11ca</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9964</th>\n",
+       "      <td>1213088264</td>\n",
+       "      <td>57805d77-f947-4851-b7fb-78baad154451</td>\n",
+       "      <td>0f048217-b139-4f35-b4c8-6bb56053ecc8</td>\n",
+       "      <td>530b54c0-3b30-44f5-a606-c6962a4eb303</td>\n",
+       "      <td>The Boys of Summer</td>\n",
+       "      <td>The Ataris</td>\n",
+       "      <td>57805d77-f947-4851-b7fb-78baad154451</td>\n",
+       "      <td>909eff8e-5ba2-41c4-81a7-4867ab8bab6d</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9975</th>\n",
+       "      <td>1213170872</td>\n",
+       "      <td>81df2271-03a1-46a3-bb30-cce187235312</td>\n",
+       "      <td>b15cb336-7ff9-4bd0-97fd-0328b0cb9b93</td>\n",
+       "      <td>2afe5070-b737-4b24-85d2-ea4cafbfbbaa</td>\n",
+       "      <td>I Believe in a Thing Called Love</td>\n",
+       "      <td>The Darkness</td>\n",
+       "      <td>81df2271-03a1-46a3-bb30-cce187235312</td>\n",
+       "      <td>bbb7c495-9ae2-4c4b-b578-5a9f8bb65003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10005</th>\n",
+       "      <td>1214298652</td>\n",
+       "      <td>980ee2d8-2ee9-407b-b48e-48360fbc7437</td>\n",
+       "      <td>cac9a27e-fa64-41bc-ae83-d4a27745d006</td>\n",
+       "      <td>cac9a27e-fa64-41bc-ae83-d4a27745d006</td>\n",
+       "      <td>The Phantom of the Opera</td>\n",
+       "      <td>Andrew Lloyd Webber</td>\n",
+       "      <td>bc598b29-d213-4c1b-8157-0fd8b1b0d534,1a2a2f2b-...</td>\n",
+       "      <td>71b76241-2f24-4d17-ba1e-cebed68230f9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10028</th>\n",
+       "      <td>1214795194</td>\n",
+       "      <td>ba0d6274-db14-4ef5-b28d-657ebde1a396</td>\n",
+       "      <td>a75be8e0-1dd3-42c2-aedd-89efa854e35d</td>\n",
+       "      <td>c61d377a-3056-4fa3-a746-36d2bfd9dceb</td>\n",
+       "      <td>Drown</td>\n",
+       "      <td>The Smashing Pumpkins</td>\n",
+       "      <td>ba0d6274-db14-4ef5-b28d-657ebde1a396</td>\n",
+       "      <td>68cb0654-979e-472f-a044-16a3a15d9add</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>333 rows × 8 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "5         True\n",
-       "6         True\n",
-       "7         True\n",
-       "8         True\n",
-       "12        True\n",
-       "         ...  \n",
-       "10004     True\n",
-       "10005    False\n",
-       "10007     True\n",
-       "10028    False\n",
-       "10044     True\n",
-       "Name: received_rec_mbid, Length: 866, dtype: bool"
+       "        timestamp                      mlhd_artist_mbid  \\\n",
+       "14     1109802260  24b4aee8-32ed-4163-98f7-55bae67411ae   \n",
+       "19     1110846571  5245e5cd-4408-4d9e-a037-c71a53edce83   \n",
+       "21     1110846985  5245e5cd-4408-4d9e-a037-c71a53edce83   \n",
+       "21     1110846985  5245e5cd-4408-4d9e-a037-c71a53edce83   \n",
+       "22     1110847156  5245e5cd-4408-4d9e-a037-c71a53edce83   \n",
+       "...           ...                                   ...   \n",
+       "9872   1212397692  b1003bf1-25b8-41f4-a783-36060f987913   \n",
+       "9964   1213088264  57805d77-f947-4851-b7fb-78baad154451   \n",
+       "9975   1213170872  81df2271-03a1-46a3-bb30-cce187235312   \n",
+       "10005  1214298652  980ee2d8-2ee9-407b-b48e-48360fbc7437   \n",
+       "10028  1214795194  ba0d6274-db14-4ef5-b28d-657ebde1a396   \n",
+       "\n",
+       "                        mlhd_recording_mbid  \\\n",
+       "14     098994f0-bf51-4393-9d3e-da220e024d76   \n",
+       "19     93f522ef-b523-4f93-9598-74adb7d25ca6   \n",
+       "21     37ed6e15-b372-441e-818f-c2711d99bb8a   \n",
+       "21     37ed6e15-b372-441e-818f-c2711d99bb8a   \n",
+       "22     f7eac6cf-c5de-4456-91d5-db5c4e067703   \n",
+       "...                                     ...   \n",
+       "9872   7782f903-7deb-4bed-be0f-627f6d6450ac   \n",
+       "9964   0f048217-b139-4f35-b4c8-6bb56053ecc8   \n",
+       "9975   b15cb336-7ff9-4bd0-97fd-0328b0cb9b93   \n",
+       "10005  cac9a27e-fa64-41bc-ae83-d4a27745d006   \n",
+       "10028  a75be8e0-1dd3-42c2-aedd-89efa854e35d   \n",
+       "\n",
+       "                             canonical_mbid                     MLHD_rec_name  \\\n",
+       "14     45024040-a343-4141-9bc9-27ef0cc9163d                  Somebody Told Me   \n",
+       "19     93f522ef-b523-4f93-9598-74adb7d25ca6                    Bitte ein Kuss   \n",
+       "21     37ed6e15-b372-441e-818f-c2711d99bb8a                             Smile   \n",
+       "21     37ed6e15-b372-441e-818f-c2711d99bb8a                             Smile   \n",
+       "22     f7eac6cf-c5de-4456-91d5-db5c4e067703                      Perfect Pair   \n",
+       "...                                     ...                               ...   \n",
+       "9872   7782f903-7deb-4bed-be0f-627f6d6450ac            Hello, I’m in Delaware   \n",
+       "9964   530b54c0-3b30-44f5-a606-c6962a4eb303                The Boys of Summer   \n",
+       "9975   2afe5070-b737-4b24-85d2-ea4cafbfbbaa  I Believe in a Thing Called Love   \n",
+       "10005  cac9a27e-fa64-41bc-ae83-d4a27745d006          The Phantom of the Opera   \n",
+       "10028  c61d377a-3056-4fa3-a746-36d2bfd9dceb                             Drown   \n",
+       "\n",
+       "            MLHD_artist_name  \\\n",
+       "14               The Killers   \n",
+       "19            Jonah Matranga   \n",
+       "21            Jonah Matranga   \n",
+       "21            Jonah Matranga   \n",
+       "22            Jonah Matranga   \n",
+       "...                      ...   \n",
+       "9872         City and Colour   \n",
+       "9964              The Ataris   \n",
+       "9975            The Darkness   \n",
+       "10005    Andrew Lloyd Webber   \n",
+       "10028  The Smashing Pumpkins   \n",
+       "\n",
+       "                                      artist_credit_list  \\\n",
+       "14                  95e1ead9-4d31-4808-a7ac-32c3614c116b   \n",
+       "19                  5245e5cd-4408-4d9e-a037-c71a53edce83   \n",
+       "21                  5245e5cd-4408-4d9e-a037-c71a53edce83   \n",
+       "21                  5245e5cd-4408-4d9e-a037-c71a53edce83   \n",
+       "22                  5245e5cd-4408-4d9e-a037-c71a53edce83   \n",
+       "...                                                  ...   \n",
+       "9872                b1003bf1-25b8-41f4-a783-36060f987913   \n",
+       "9964                57805d77-f947-4851-b7fb-78baad154451   \n",
+       "9975                81df2271-03a1-46a3-bb30-cce187235312   \n",
+       "10005  bc598b29-d213-4c1b-8157-0fd8b1b0d534,1a2a2f2b-...   \n",
+       "10028               ba0d6274-db14-4ef5-b28d-657ebde1a396   \n",
+       "\n",
+       "                          received_rec_mbid  \n",
+       "14     526c30bd-b249-4f2a-8b20-508ad44605c7  \n",
+       "19     427e93bc-06fb-4090-95a0-23d208d38654  \n",
+       "21     7b481c87-38db-47dd-bc5b-f1014f395ff7  \n",
+       "21     7b481c87-38db-47dd-bc5b-f1014f395ff7  \n",
+       "22     a85092fb-dff4-49c0-b200-ada753aa9017  \n",
+       "...                                     ...  \n",
+       "9872   9bd93304-842f-4f46-9409-a2e4ff5b11ca  \n",
+       "9964   909eff8e-5ba2-41c4-81a7-4867ab8bab6d  \n",
+       "9975   bbb7c495-9ae2-4c4b-b578-5a9f8bb65003  \n",
+       "10005  71b76241-2f24-4d17-ba1e-cebed68230f9  \n",
+       "10028  68cb0654-979e-472f-a044-16a3a15d9add  \n",
+       "\n",
+       "[333 rows x 8 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "final_mapping[-final_mapping.canonical_mbid.isin(final_mapping.received_rec_mbid)].received_rec_mbid.isna()"
+    "# final_mapping[-final_mapping.canonical_mbid.isin(final_mapping.received_rec_mbid)].dropna(subset=['received_rec_mbid']).to_csv('unk_ids/MBID_mapping_errors.csv', index=False)\n",
+    "final_mapping[-final_mapping.canonical_mbid.isin(final_mapping.received_rec_mbid)].dropna(subset=['received_rec_mbid'])"
    ]
   }
  ],
