addedd 'how_many' param to load.py

--- a/MLHD.ipynb
+++ b/MLHD.ipynb
@@ -12,7 +12,8 @@
     "import matplotlib.pyplot as plt\n",
     "from IPython.display import Markdown as MD\n",
     "from IPython.display import display\n",
-    "from numba import jit, njit, vectorize"
+    "from numba import jit, njit, vectorize\n",
+    "import sqlalchemy as sa"
    ]
   },
   {
@@ -897,7 +898,7 @@
     "null_count_rel = df['release-MBID'].isnull().value_counts()\n",
     "\n",
     "def get_null_stats(val_count, attr_name):\n",
-    "    print(\"Number of NOT-null rows in {} = {}\".format(attr_name, (val_count[0]/val_count.sum())*100))\n",
+    "    print(\"Number of NOT-null rows in {} = {}%\".format(attr_name, (val_count[0]/val_count.sum())*100))\n",
     "\n",
     "get_null_stats(null_count_artist, 'artist-MBID')\n",
     "get_null_stats(null_count_rec, 'recording-MBID')\n",
