ucleaned file_type_io_testing.ipynb

--- a/file_type_io_testing.ipynb
+++ b/file_type_io_testing.ipynb
@@ -15,13 +15,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Testing Load times"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -31,6 +24,13 @@
     "    paths = f.readlines()\n",
     "\n",
     "paths = [path.strip() for path in paths]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Write times"
    ]
   },
   {
@@ -157,6 +157,13 @@
     "zst_txt_write_end = time.monotonic()\n",
     "zst_txt_write_time = zst_txt_write_end - zst_txt_write_start\n",
     "zst_txt_write_time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Read Times"
    ]
   },
   {
@@ -311,7 +318,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## File Sizes"
+    "# File Sizes"
    ]
   },
   {
