completed and updated rec_track_checker.ipynb

--- a/rec_track_checker.ipynb
+++ b/rec_track_checker.ipynb
@@ -634,35 +634,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_2230286/3604758999.py:1: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n",
-      "  df_test_positive.recording_MBID.values in MB_track.gid.values\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "df_test_positive.recording_MBID.values in MB_track.gid.values"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
@@ -715,73 +686,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# output_log = {\n",
-    "#     'path': [], \n",
-    "#     'logs': [],\n",
-    "#     'time_taken': [],\n",
-    "#     }\n",
-    "\n",
-    "def log_output(Series_to_log, path, time_taken, master_log_dict):\n",
+    "def log_output(Series_to_log, path, time_taken, timestamp, master_log_dict):\n",
     "    \"\"\"\n",
-    "    Function to log output dataframe and path\n",
+    "    Function to log output series and path\n",
     "    \"\"\"\n",
-    "    # Converts df to dictionary for ease of access.\n",
+    "    # If keys not in dict, generate empty list with dict\n",
+    "    key_set = {'path', 'logs', 'time_taken', 'timestamp'}\n",
     "    \n",
-    "    try:\n",
-    "        master_log_dict['path'].append(path)\n",
-    "        master_log_dict['logs'].append(Series_to_log)\n",
-    "        master_log_dict['time_taken'].append(time_taken)\n",
+    "    for key in key_set:\n",
+    "        if key not in master_log_dict.keys():\n",
+    "            master_log_dict[key]=[] \n",
     "    \n",
-    "    except KeyError:\n",
-    "        raise Exception(\"Provide a valid dictionary for logging\")\n",
-    "    \n",
-    "    except:\n",
-    "        raise Exception(\"Something went wrong\")\n",
-    "    \n",
+    "    master_log_dict['path'].append(path)\n",
+    "    master_log_dict['logs'].append(Series_to_log)\n",
+    "    master_log_dict['time_taken'].append(time_taken)\n",
+    "    master_log_dict['timestamp'].append(timestamp)\n",
+    "        \n",
     "    return master_log_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'path': ['test_path', 'test_path', 'test_path'],\n",
-       " 'logs': [['9b02977e-a03b-4a6b-a9a9-06e722bdcd7a',\n",
-       "   '43da7544-6283-3159-84f9-537fe823a1a7',\n",
-       "   'd8abbf14-5945-3639-a0c9-3e9c70b1c0a4',\n",
-       "   '446b27ef-92fd-3ea1-ad0a-fe1055196406'],\n",
-       "  ['9b02977e-a03b-4a6b-a9a9-06e722bdcd7a',\n",
-       "   '43da7544-6283-3159-84f9-537fe823a1a7'],\n",
-       "  None],\n",
-       " 'time_taken': [0.55, 0.55, 0.55]}"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'logs': [['9b02977e-a03b-4a6b-a9a9-06e722bdcd7a', '43da7544-6283-3159-84f9-537fe823a1a7', 'd8abbf14-5945-3639-a0c9-3e9c70b1c0a4', '446b27ef-92fd-3ea1-ad0a-fe1055196406'], ['9b02977e-a03b-4a6b-a9a9-06e722bdcd7a', '43da7544-6283-3159-84f9-537fe823a1a7'], None], 'time_taken': [0.55, 0.55, 0.55], 'path': ['test_path', 'test_path', 'test_path'], 'timestamp': [7533943.827020003, 7533943.827115547, 7533943.827191365]}\n"
+     ]
     }
    ],
    "source": [
-    "# Test for log_output\n",
-    "output_log = {\n",
-    "    'path': [], \n",
-    "    'logs': [],\n",
-    "    'time_taken': [],\n",
-    "    }\n",
+    "output_log = {}\n",
     "\n",
-    "log_output(test_output_positive, \"test_path\", 0.55 , output_log)\n",
-    "log_output(test_output_positive[:2], \"test_path\", 0.55 , output_log)\n",
-    "log_output(test_output_negative, \"test_path\", 0.55 , output_log)\n",
+    "log_output(test_output_positive, \"test_path\", 0.55, monotonic(), output_log)\n",
+    "log_output(test_output_positive[:2], \"test_path\", 0.55, monotonic(), output_log)\n",
+    "log_output(test_output_negative, \"test_path\", 0.55, monotonic(), output_log)\n",
     "\n",
-    "output_log"
+    "print(output_log)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_log(log_dict, log_path):\n",
+    "    \"\"\"Function to update log\"\"\"\n",
+    "    # Make directory inside WRITE_ROOT if it doesn't exist\n",
+    "    os.makedirs(os.path.dirname(log_path), exist_ok=True)\n",
+    "\n",
+    "    with open(log_path, 'w') as f:\n",
+    "        json.dump(log_dict, f)\n",
+    "    return log_path"
    ]
   },
   {
@@ -1220,23 +1184,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Writing files: 100%|██████████| 50/50 [00:10<00:00,  4.74Files/s]"
+      "Writing files: 100%|██████████| 20/20 [00:04<00:00,  4.98Files/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total Time Taken:  10.562\n",
-      "CPU times: user 10.4 s, sys: 68.4 ms, total: 10.5 s\n",
-      "Wall time: 10.6 s\n"
+      "Total Time Taken:  4.023\n",
+      "CPU times: user 3.91 s, sys: 29.1 ms, total: 3.94 s\n",
+      "Wall time: 4.02 s\n"
      ]
     },
     {
@@ -1254,11 +1218,13 @@
     "    'logs': [],\n",
     "    'time_taken': [],\n",
     "    }\n",
-    "LOG_WRITE_PATH = \"\"\n",
+    "LOG_WRITE_PATH = \"/home/snaek/MLHD/rec_track_checker/MLHD/log.json\"\n",
+    "LOG_EPOCH = 10\n",
+    "\n",
+    "file_counter = 0\n",
     "\n",
     "master_start = monotonic()\n",
-    "\n",
-    "for path in tqdm(MLHD_FILES[:50], desc=\"Writing files\", unit = 'Files'):\n",
+    "for path in tqdm(MLHD_FILES[:20], desc=\"Writing files\", unit = 'Files'):\n",
     "    start = monotonic()\n",
     "    # Start Processing\n",
     "    df_loop = load_path(path)\n",
@@ -1272,8 +1238,11 @@
     "\n",
     "    # Logging\n",
     "\n",
-    "    log_output(output, path, round(end - start, 3), output_log)\n",
-    "    # print(\"Process Time: \", round(end - start, 3))\n",
+    "    file_counter += 1\n",
+    "    \n",
+    "    log_output(output, path, round(end - start, 3), monotonic(), output_log)\n",
+    "    if file_counter%10 == 0:\n",
+    "        _ = write_log(output_log, LOG_WRITE_PATH)\n",
     "\n",
     "master_end = monotonic()\n",
     "print(\"Total Time Taken: \", round(master_end - master_start, 3))\n",
